@@ -70,6 +70,8 @@
 	* almost completely changed the storage interface (for custom storage)
 	* added support for hashing pieces in multiple threads
 
+	* expose missing dht_settings fields to python
+	* add function to query the DHT settings
 	* fix bug in 'dont_count_slow_torrents' feature, which would start too many
 	  torrents
 
